--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Producto 1 -->
     <section class="producto">
       <figure>
-        <img src="\corrector.png" alt="Corrector Instantáneo de Ojeras" width="200">
+        <img src="/corrector.png" alt="Corrector Instantáneo de Ojeras" width="200">
         <figcaption>Corrector Instantáneo de Ojeras</figcaption>
       </figure>
       <h2>CORRECTOR INSTANTÁNEO DE OJERAS</h2>
@@ -41,7 +41,7 @@
     <!-- Producto 2 -->
     <section class="producto">
       <figure>
-        <img src="\crema_hidradante.png" alt="Crema Hidratante Súper Ligera" width="200">
+        <img src="/crema_hidradante.png" alt="Crema Hidratante Súper Ligera" width="200">
         <figcaption>Crema Hidratante Súper Ligera</figcaption>
       </figure>
       <h2>CREMA HIDRATANTE SÚPER LIGERA</h2>
@@ -117,3 +117,4 @@
 
 </body>
 </html>
+
