Fix image source paths for product sections in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Producto 1 -->
     <section class="producto">
       <figure>
-        <img src="/corrector.png" alt="Corrector Instantáneo de Ojeras" width="200">
+        <img src="corrector.png" alt="Corrector Instantáneo de Ojeras" width="200">
         <figcaption>Corrector Instantáneo de Ojeras</figcaption>
       </figure>
       <h2>CORRECTOR INSTANTÁNEO DE OJERAS</h2>
@@ -41,7 +41,7 @@
     <!-- Producto 2 -->
     <section class="producto">
       <figure>
-        <img src="/crema_hidradante.png" alt="Crema Hidratante Súper Ligera" width="200">
+        <img src="crema_hidradante.png" alt="Crema Hidratante Súper Ligera" width="200">
         <figcaption>Crema Hidratante Súper Ligera</figcaption>
       </figure>
       <h2>CREMA HIDRATANTE SÚPER LIGERA</h2>
@@ -64,7 +64,7 @@
     <!-- Producto 3 -->
     <section class="producto">
       <figure>
-        <img src="/crema_hidradante.png" alt="Limpiador Facial de Carbón Detox Diario" width="200">
+        <img src="crema_hidradante.png" alt="Limpiador Facial de Carbón Detox Diario" width="200">
         <figcaption>Limpiador Facial de Carbón Detox Diario</figcaption>
       </figure>
       <h2>LIMPIADOR FACIAL DE CARBÓN DETOX DIARIO</h2>
@@ -87,7 +87,7 @@
     <!-- Producto 4 -->
     <section class="producto">
       <figure>
-        <img src="/serum_antiarrugas.jpg" alt="Sérum Antiarrugas" width="200">
+        <img src="serum_antiarrugas.jpg" alt="Sérum Antiarrugas" width="200">
         <figcaption>Sérum Antiarrugas</figcaption>
       </figure>
       <h2>SÉRUM ANTIARRUGAS</h2>
